loader & footer added

--- a/index.html
+++ b/index.html
@@ -15,13 +15,48 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div class="site-container">
+        <!-- Loader Screen -->
+    <div class="loader-container" id="loader">
+        <svg xmlns="http://www.w3.org/2000/svg" height="200px" width="200px" viewBox="0 0 200 200" class="pencil">
+            <defs>
+                <clipPath id="pencil-eraser">
+                    <rect height="30" width="30" ry="5" rx="5"></rect>
+                </clipPath>
+            </defs>
+            <circle transform="rotate(-113,100,100)" stroke-linecap="round" stroke-dashoffset="439.82" stroke-dasharray="439.82 439.82" stroke-width="2" stroke="currentColor" fill="none" r="70" class="pencil__stroke"></circle>
+            <g transform="translate(100,100)" class="pencil__rotate">
+                <g fill="none">
+                    <circle transform="rotate(-90)" stroke-dashoffset="402" stroke-dasharray="402.12 402.12" stroke-width="30" stroke="hsl(223,90%,50%)" r="64" class="pencil__body1"></circle>
+                    <circle transform="rotate(-90)" stroke-dashoffset="465" stroke-dasharray="464.96 464.96" stroke-width="10" stroke="hsl(223,90%,60%)" r="74" class="pencil__body2"></circle>
+                    <circle transform="rotate(-90)" stroke-dashoffset="339" stroke-dasharray="339.29 339.29" stroke-width="10" stroke="hsl(223,90%,40%)" r="54" class="pencil__body3"></circle>
+                </g>
+                <g transform="rotate(-90) translate(49,0)" class="pencil__eraser">
+                    <g class="pencil__eraser-skew">
+                        <rect height="30" width="30" ry="5" rx="5" fill="hsl(223,90%,70%)"></rect>
+                        <rect clip-path="url(#pencil-eraser)" height="30" width="5" fill="hsl(223,90%,60%)"></rect>
+                        <rect height="20" width="30" fill="hsl(223,10%,90%)"></rect>
+                        <rect height="20" width="15" fill="hsl(223,10%,70%)"></rect>
+                        <rect height="20" width="5" fill="hsl(223,10%,80%)"></rect>
+                        <rect height="2" width="30" y="6" fill="hsla(223,10%,10%,0.2)"></rect>
+                        <rect height="2" width="30" y="13" fill="hsla(223,10%,10%,0.2)"></rect>
+                    </g>
+                </g>
+                <g transform="rotate(-90) translate(49,-30)" class="pencil__point">
+                    <polygon points="15 0,30 30,0 30" fill="hsl(33,90%,70%)"></polygon>
+                    <polygon points="15 0,6 30,0 30" fill="hsl(33,90%,50%)"></polygon>
+                    <polygon points="15 0,20 10,10 10" fill="hsl(223,10%,10%)"></polygon>
+                </g>
+            </g>
+        </svg>
+        <div class="loader-text">Please Wait....</div>
+    </div>
+    <div class="site-container" id="site-container">
         <div class="layout-container">
             <!-- Navigation -->
             <nav class="navbar">
                 <div class="nav-container">
                     <a href="#" class="logo">
-                        <div class="logo-icon"><img src="./src/logo/logo.png"></div>
+                        <div class="logo-icon"><img src="./src/logo/logo.png" ></div>
                         Jinyasa Concept School
                     </a>
                     
@@ -66,8 +101,8 @@
                             <div class="video-overlay"></div>
                             <div class="hero-text">
                             <div class="hero-text">
-                                <h1 class="hero-title">Welcome to Jinyasa</h1>
-                                <p class="hero-subtitle">Concept School</p>
+                                <h1 class="hero-title" draggable="true">Welcome to Jinyasa</h1>
+                                <p class="hero-subtitle" draggable="true">Concept School</p>
                             </div>
                         </div>
                     </section>
@@ -181,56 +216,33 @@
             </main>
         </div>
     </div>
-    <script>
-        // Mobile menu toggle
-        const hamburger = document.getElementById('hamburger');
-        const navMenu = document.getElementById('nav-menu');
-
-        hamburger.addEventListener('click', () => {
-            hamburger.classList.toggle('active');
-            navMenu.classList.toggle('active');
-        });
-
-        // Close mobile menu when clicking on a link
-        document.querySelectorAll('.nav-link').forEach(n => n.addEventListener('click', () => {
-            hamburger.classList.remove('active');
-            navMenu.classList.remove('active');
-        }));
-
-        // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'start'
-                    });
-                }
-            });
-        });
-
-        // Update active nav link on scroll
-        window.addEventListener('scroll', () => {
-            let current = '';
-            const sections = document.querySelectorAll('section[id]');
-            
-            sections.forEach(section => {
-                const sectionTop = section.offsetTop;
-                const sectionHeight = section.clientHeight;
-                if (scrollY >= (sectionTop - 200)) {
-                    current = section.getAttribute('id');
-                }
-            });
-
-            document.querySelectorAll('.nav-link').forEach(link => {
-                link.classList.remove('active');
-                if (link.getAttribute('href') === `#${current}`) {
-                    link.classList.add('active');
-                }
-            });
-        });
+    <script src="../js/script.js"></script>
+    <footer class="footer">
+  <div class="footer-links">
+    <a href="#">Academics</a>
+    <a href="#">Admissions</a>
+    <a href="#">Student Life</a>
+    <a href="#">Contact Us</a>
+    <a href="#">Privacy Policy</a>
+  </div>
+  <div class="footer-social">
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+  </div>
+  <p>© 2024 University Prep. All rights reserved.</p>
+</footer>
+<style>
+/* Add your footer CSS here if needed */
+</style>
+<script>
+  window.addEventListener('scroll', () => {
+    const footer = document.querySelector('.footer');
+    const scrollable = document.documentElement.scrollHeight - window.innerHeight;
+    if (window.scrollY >= scrollable - 10) {
+      footer.classList.add('visible');
+    }
+  });
 </script>
 </body>
 </html>
