--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
     <link rel="icon" type="image/png" href="./src/logo/logo.png">
     <link
-      rel="stylesheet"
+      rel="stylesheet"   
       as="style"
       onload="this.rel='stylesheet'"
       href="https://fonts.googleapis.com/css2?display=swap&family=Noto+Sans:wght@400;500;700;900&family=Spline+Sans:wght@400;500;700">
@@ -26,9 +26,9 @@
             <circle transform="rotate(-113,100,100)" stroke-linecap="round" stroke-dashoffset="439.82" stroke-dasharray="439.82 439.82" stroke-width="2" stroke="currentColor" fill="none" r="70" class="pencil__stroke"></circle>
             <g transform="translate(100,100)" class="pencil__rotate">
                 <g fill="none">
-                    <circle transform="rotate(-90)" stroke-dashoffset="402" stroke-dasharray="402.12 402.12" stroke-width="30" stroke="hsl(223,90%,50%)" r="64" class="pencil__body1"></circle>
-                    <circle transform="rotate(-90)" stroke-dashoffset="465" stroke-dasharray="464.96 464.96" stroke-width="10" stroke="hsl(223,90%,60%)" r="74" class="pencil__body2"></circle>
-                    <circle transform="rotate(-90)" stroke-dashoffset="339" stroke-dasharray="339.29 339.29" stroke-width="10" stroke="hsl(223,90%,40%)" r="54" class="pencil__body3"></circle>
+                    <circle transform="rotate(-90)" stroke-dashoffset="402" stroke-dasharray="402.12 402.12" stroke-width="30" stroke="hsl(2232,90%,45%)" r="64" class="pencil__body1"></circle>
+                    <circle transform="rotate(-90)" stroke-dashoffset="465" stroke-dasharray="464.96 464.96" stroke-width="10" stroke="hsl(2232,90%,60%)" r="74" class="pencil__body2"></circle>
+                    <circle transform="rotate(-90)" stroke-dashoffset="339" stroke-dasharray="339.29 339.29" stroke-width="10" stroke="hsl(2232,90%,40%)" r="54" class="pencil__body3"></circle>
                 </g>
                 <g transform="rotate(-90) translate(49,0)" class="pencil__eraser">
                     <g class="pencil__eraser-skew">
@@ -106,6 +106,7 @@
                             </div>
                         </div>
                     </section>
+                    <hr class="section-divider-1">
 
                     <!-- About Section -->
                     <section id="about" class="about-section">
@@ -114,6 +115,7 @@
                             Jinyasa Concept School is committed to creating a joyful and stimulating learning environment for young children. Our dedicated teachers and colorful classrooms help children develop a love for learning and exploration.
                         </p>
                     </section>
+                    <hr class="section-divider-2">
 
                     <!-- Classes Section -->
                     <section id="classes" class="classes-section">
@@ -144,6 +146,7 @@
                             </div>
                         </div>
                     </section>
+                    <hr class="section-divider-3">
 
                     <!-- Learning Philosophy Section -->
                     <section class="philosophy-section">
@@ -174,6 +177,7 @@
                             </div>
                         </div>
                     </section>
+                    <hr class="section-divider-4">
 
                     <!-- Admissions Section -->
                     <section id="admissions" class="admissions-section">
