--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </main>
         </div>
     </div>
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
     <footer class="footer">
   <div class="footer-links">
     <a href="#">Academics</a>
