section under navbar fixed

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <a href="#home" class="nav-link active">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#about" class="nav-link">About</a>
+                            <a href="#section-divider-about" class="nav-link">About</a>
                         </li>
                         <li class="nav-item">
                             <a href="#classes" class="nav-link">Classes</a>
@@ -106,7 +106,7 @@
                             </div>
                         </div>
                     </section>
-                    <hr class="section-divider-1">
+                    <hr id="section-divider-about">
 
                     <!-- About Section -->
                     <section id="about" class="about-section">
@@ -115,7 +115,7 @@
                             Jinyasa Concept School is committed to creating a joyful and stimulating learning environment for young children. Our dedicated teachers and colorful classrooms help children develop a love for learning and exploration.
                         </p>
                     </section>
-                    <hr class="section-divider-2">
+                    <hr id="section-divider-classes">
 
                     <!-- Classes Section -->
                     <section id="classes" class="classes-section">
@@ -146,7 +146,7 @@
                             </div>
                         </div>
                     </section>
-                    <hr class="section-divider-3">
+                    <hr id="section-divider-learning-philosophy">
 
                     <!-- Learning Philosophy Section -->
                     <section class="philosophy-section">
@@ -177,7 +177,7 @@
                             </div>
                         </div>
                     </section>
-                    <hr class="section-divider-4">
+                    <hr id="section-divider-admissions">
 
                     <!-- Admissions Section -->
                     <section id="admissions" class="admissions-section">
@@ -186,6 +186,7 @@
                             We welcome new students to join our vibrant community. Contact us to learn more about our admissions process and how to enroll your child in our nurturing environment.
                         </p>
                     </section>
+                    <hr id="section-divider-gallery">
 
                     <!-- Gallery Section -->
                     <section id="gallery" class="gallery-section">
@@ -199,6 +200,7 @@
                             <div class="gallery-item gallery-item-6"></div>
                         </div>
                     </section>
+                    <hr id="section-divider-contact">
 
                     <!-- Contact Section -->
                     <section id="contact" class="contact-section">
