--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         <p class="section-text">Get in touch with us to schedule a visit or ask any questions. We're here to help!</p>
                         
                         <!-- From Uiverse.io by andrew-demchenk0 --> 
-<form class="form" action="./pages/gallery.html" method="POST">
+<form class="form" action="./pages/gallery.html">
   <div class="title">Contact Us<br></div>
   <input type="FirstName" placeholder="FirstName" name="FirstName" class="input">
   <input type="LastName" placeholder="LastName" name="LastName" class="input">
