update gallery button to use onclick for navigation

--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                         </div>
                     </section>
                     <!-- From Uiverse.io by alexmaracinaru --> 
-                       <div class="gallery-button-container">
-                            <button class="gallery-button" action="./pages/gallery.html">
+                       <div class="gallery-button-container" >
+                            <button class="gallery-button" onclick="window.location.href='./pages/gallery.html'">
                                 <span class="hover-underline-animation-gallery">Visit Gallery</span>
                                 <svg
                                     id="arrow-horizontal"
