--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Plus+Jakarta+Sans%3Awght%40400%3B500%3B700%3B800"
     />
 
-    <title>Stitch Design</title>
+    <title>Gallery</title>
     <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64," />
 
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
@@ -46,6 +46,10 @@
     </div>
     
       <style>
+        .body {
+          font-family: 'Plus Jakarta Sans', 'Noto Sans', sans-serif;
+          background-image: url(../src/doodle.png);
+        }
         .p{align-items: center;}
         text {
           font-family: 'Plus Jakarta Sans', 'Noto Sans', sans-serif;
