--- a/index.html
+++ b/index.html
@@ -182,10 +182,9 @@
                         <p class="section-text">
                             Our experienced teachers use interactive activities, storytelling, music, art, and outdoor play to make learning fun and engaging. A low student-to-teacher ratio ensures each child gets personal attention and support.                        </p>
                         <div class="wj-gallery">
-                            <div class="wj-gallery-item wj-gallery-main" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuCgsRBIwd5osJ2cd5IAsfHQpi7p28VsmYI5h3F9DaqsNCr27Oo2AJ-6fsrhxW6ZoNO4hfV29gh1Dn76dwJuCpGLQkwE4oWjYzeSS3MeOHtJZhzGbXfDCpxeYJGoR_wheKbz5VMc8jyk2q5HK8G_0HcmFWufF9w9CDHFUJt-lWg-vDpfNv5v3EkBDwEUHfNV0NbzTCSHnxVeg_XOR51tSN6bFlFdgFKuQXr6FWsD0V9XJzQQRQrmZsD08yJvkyHyerjuvSju339sOZ4');"></div>
-                            <div class="wj-gallery-item" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDG2cs1Hex6ut_AgQ7HN5RdBr_Hh1qYOul8jX67T0W6jtrkU8xSO4C4m4ucgSCvZaUqtmA_BZR2FhL-BiCYd5xj46YObFforuvlyfhhTIVJRMIEcfFRy5QMCM3kx4fcPMaBiHTrtcfL6ISrrTOacvAniGRhCe3KT5akoqfw3tgVPgSkHZXa8jxLp9dfPzp4VQAAY3ZeG98moyJWgQqav_JIz7k0LgQdcjquUh8iaG2087ZeZquzVpDqReDzyzA3iZM9qS0LdMjz8I0');"></div>
-                            <div class="wj-gallery-item" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBfy3UuMw9VF_HXv8dEtpQ9J22oJqr83vsGJ_aIGJ9C6Zm0977xW_HJPnJW6iILuWUHbhymFkZISVQr9--mC9cHNf8coY_h216pcBedQmqiqvQGNxMdoBfG9vJlkvOHB9vRY_jNl7olpcorJkFpf_yoR56dejSO27te41l7Bhv2etLL10CltWfZ2LkAvbFq_XWvpCsN1F_QywCG7pDfXX94tKeOdwJoHxy60-IrY1yqt0_Q-8tm-H-uck47Om4Jjl6mi1tGjhmMmxA');"></div>
-                            <div class="wj-gallery-item wj-gallery-sub" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDG2cs1Hex6ut_AgQ7HN5RdBr_Hh1qYOul8jX67T0W6jtrkU8xSO4C4m4ucgSCvZaUqtmA_BZR2FhL-BiCYd5xj46YObFforuvlyfhhTIVJRMIEcfFRy5QMCM3kx4fcPMaBiHTrtcfL6ISrrTOacvAniGRhCe3KT5akoqfw3tgVPgSkHZXa8jxLp9dfPzp4VQAAY3ZeG98moyJWgQqav_JIz7k0LgQdcjquUh8iaG2087ZeZquzVpDqReDzyzA3iZM9qS0LdMjz8I0');"></div>
+                            <div class="wj-gallery-item wj-gallery-main" style="background-image: url('./src/teaching-methods/1.png');"></div>
+                            <div class="wj-gallery-item wj-gallery-sub"  style="background-image: url('./src/teaching-methods/2.png');"></div>
+                            <div class="wj-gallery-item wj-gallery-sub" style="background-image: url('./src/teaching-methods/4.png');"></div>
                         </div>
                     </section>
 
@@ -223,10 +222,9 @@
                         <p class="section-text">
                             Our school offers safe, modern facilities with bright classrooms, age-appropriate learning materials, and a secure outdoor play area. We also feature a library, art studio, and music room to enrich every child’s learning experience.                        </p>
                         <div class="wj-gallery">
-                            <div class="wj-gallery-item wj-gallery-main" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuCgsRBIwd5osJ2cd5IAsfHQpi7p28VsmYI5h3F9DaqsNCr27Oo2AJ-6fsrhxW6ZoNO4hfV29gh1Dn76dwJuCpGLQkwE4oWjYzeSS3MeOHtJZhzGbXfDCpxeYJGoR_wheKbz5VMc8jyk2q5HK8G_0HcmFWufF9w9CDHFUJt-lWg-vDpfNv5v3EkBDwEUHfNV0NbzTCSHnxVeg_XOR51tSN6bFlFdgFKuQXr6FWsD0V9XJzQQRQrmZsD08yJvkyHyerjuvSju339sOZ4');"></div>
-                            <div class="wj-gallery-item wj-gallery-sub" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDG2cs1Hex6ut_AgQ7HN5RdBr_Hh1qYOul8jX67T0W6jtrkU8xSO4C4m4ucgSCvZaUqtmA_BZR2FhL-BiCYd5xj46YObFforuvlyfhhTIVJRMIEcfFRy5QMCM3kx4fcPMaBiHTrtcfL6ISrrTOacvAniGRhCe3KT5akoqfw3tgVPgSkHZXa8jxLp9dfPzp4VQAAY3ZeG98moyJWgQqav_JIz7k0LgQdcjquUh8iaG2087ZeZquzVpDqReDzyzA3iZM9qS0LdMjz8I0');"></div>
-                            <div class="wj-gallery-item" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDG2cs1Hex6ut_AgQ7HN5RdBr_Hh1qYOul8jX67T0W6jtrkU8xSO4C4m4ucgSCvZaUqtmA_BZR2FhL-BiCYd5xj46YObFforuvlyfhhTIVJRMIEcfFRy5QMCM3kx4fcPMaBiHTrtcfL6ISrrTOacvAniGRhCe3KT5akoqfw3tgVPgSkHZXa8jxLp9dfPzp4VQAAY3ZeG98moyJWgQqav_JIz7k0LgQdcjquUh8iaG2087ZeZquzVpDqReDzyzA3iZM9qS0LdMjz8I0');"></div>
-                            <div class="wj-gallery-item" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBfy3UuMw9VF_HXv8dEtpQ9J22oJqr83vsGJ_aIGJ9C6Zm0977xW_HJPnJW6iILuWUHbhymFkZISVQr9--mC9cHNf8coY_h216pcBedQmqiqvQGNxMdoBfG9vJlkvOHB9vRY_jNl7olpcorJkFpf_yoR56dejSO27te41l7Bhv2etLL10CltWfZ2LkAvbFq_XWvpCsN1F_QywCG7pDfXX94tKeOdwJoHxy60-IrY1yqt0_Q-8tm-H-uck47Om4Jjl6mi1tGjhmMmxA');"></div>
+                            <div class="wj-gallery-item wj-gallery-main" style="background-image: url('./src/facilities/1.png');"></div>
+                            <div class="wj-gallery-item wj-gallery-sub"  style="background-image: url('./src/facilities/2.png');"></div>
+                            <div class="wj-gallery-item wj-gallery-sub" style="background-image: url('./src/facilities/3.png');"></div>
                         </div>
                     </section>
                     <section class="content-section fade-in">
@@ -234,9 +232,9 @@
                         <p class="section-text">
                             Alongside our core curriculum, we offer special programs like language classes, music and movement, art workshops, cultural activities, and field trips. Regular events and celebrations help build community and create lasting memories.                        </p>
                         <div class="wj-gallery-f">
-                            <div class="wj-gallery-item wj-gallery-sub-f1" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDG2cs1Hex6ut_AgQ7HN5RdBr_Hh1qYOul8jX67T0W6jtrkU8xSO4C4m4ucgSCvZaUqtmA_BZR2FhL-BiCYd5xj46YObFforuvlyfhhTIVJRMIEcfFRy5QMCM3kx4fcPMaBiHTrtcfL6ISrrTOacvAniGRhCe3KT5akoqfw3tgVPgSkHZXa8jxLp9dfPzp4VQAAY3ZeG98moyJWgQqav_JIz7k0LgQdcjquUh8iaG2087ZeZquzVpDqReDzyzA3iZM9qS0LdMjz8I0');"></div>
-                            <div class="wj-gallery-item wj-gallery-sub-f" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDG2cs1Hex6ut_AgQ7HN5RdBr_Hh1qYOul8jX67T0W6jtrkU8xSO4C4m4ucgSCvZaUqtmA_BZR2FhL-BiCYd5xj46YObFforuvlyfhhTIVJRMIEcfFRy5QMCM3kx4fcPMaBiHTrtcfL6ISrrTOacvAniGRhCe3KT5akoqfw3tgVPgSkHZXa8jxLp9dfPzp4VQAAY3ZeG98moyJWgQqav_JIz7k0LgQdcjquUh8iaG2087ZeZquzVpDqReDzyzA3iZM9qS0LdMjz8I0');"></div>
-                            <div class="wj-gallery-item wj-gallery-main-f" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuCgsRBIwd5osJ2cd5IAsfHQpi7p28VsmYI5h3F9DaqsNCr27Oo2AJ-6fsrhxW6ZoNO4hfV29gh1Dn76dwJuCpGLQkwE4oWjYzeSS3MeOHtJZhzGbXfDCpxeYJGoR_wheKbz5VMc8jyk2q5HK8G_0HcmFWufF9w9CDHFUJt-lWg-vDpfNv5v3EkBDwEUHfNV0NbzTCSHnxVeg_XOR51tSN6bFlFdgFKuQXr6FWsD0V9XJzQQRQrmZsD08yJvkyHyerjuvSju339sOZ4');"></div>
+                            <div class="wj-gallery-item wj-gallery-sub-f1" style="background-image: url('./src/special-events/2.png');"></div>
+                            <div class="wj-gallery-item wj-gallery-sub-f" style="background-image: url('./src/special-events/3.png');"></div>
+                            <div class="wj-gallery-item wj-gallery-main-f" style="background-image: url('./src/special-events/1.png');"></div>
                         </div>
                     </section>
                     <hr id="section-divider-admissions">
@@ -472,11 +470,11 @@
     <script src="./js/script.js"></script>
     <footer class="footer">
   <div class="footer-links">
-    <a href="#">Academics</a>
-    <a href="#">Admissions</a>
-    <a href="#">Student Life</a>
-    <a href="#">Contact Us</a>
-    <a href="#">Privacy Policy</a>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#why-jidnyasa">Why Jidnyasa?</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#contact">Contact Us</a>
   </div>
   <div class="footer-social">
     <a href="#"><i class="fab fa-twitter"></i></a>
@@ -485,11 +483,7 @@
   </div>
   <p>© 2025 Jinyasa Concept School. All rights reserved.</p>
   <p>Develop by<a href="https://github.com/prajwaljamodkar"> Prajwal Jamodkar</a></p>
-</footer>
-<style>
-/* Add your footer CSS here if needed */
-</style>
-<script>
+  <script>
   window.addEventListener('scroll', () => {
     const footer = document.querySelector('.footer');
     const scrollable = document.documentElement.scrollHeight - window.innerHeight;
@@ -498,5 +492,6 @@
     }
   });
 </script>
+</footer>
 </body>
 </html>
