--- a/index.html
+++ b/index.html
@@ -334,14 +334,14 @@
                         <p class="section-text">Email: <a href="mailto:jidnyasamzr@gmail.com" class="email-link">jidnyasamzr@gmail.com</a>
                     </section>
                         <!-- From Uiverse.io by andrew-demchenk0 --> 
-                    <form class="form" id="contact-form" action="./pages/gallery.html">
+                    <form class="form" id="contact-form" action="https://formsubmit.co/jidnyasamzr@gmail.com" method="post">
                         <div class="title">Contact Us<br></div>
-                        <input type="FirstName" placeholder="FirstName" name="FirstName" class="input">
-                        <input type="LastName" placeholder="LastName" name="LastName" class="input">
-                        <input type="Mobile" placeholder="Mobile" name="Mobile" class="input">
-                        <input type="email" placeholder="Email" name="email" class="input">
-                        <textarea name="textarea" id="textarea" class="input" placeholder="Massege" rows="10" cols="50"></textarea>
-                        <button class="button-confirm">SUBMIT →</button>
+                        <input type="FirstName" placeholder="FirstName" name="FirstName" class="input" required>
+                        <input type="LastName" placeholder="LastName" name="LastName" class="input" required>
+                        <input type="Mobile" placeholder="Mobile" name="Mobile" class="input" required>
+                        <input type="email" placeholder="Email" name="Email" class="input" required>
+                        <textarea name="Massege" id="textarea" class="input" placeholder="Massege" name="Massege" rows="10" cols="50" required></textarea>
+                        <button class="button-confirm" type="submit">SUBMIT →</button>
                     </form>
                     <style>
                         /* From Uiverse.io by andrew-demchenk0 */ 
