--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <!-- Navigation -->
             <nav class="navbar">
                 <div class="nav-container">
-                    <a href="#" class="logo">
+                    <a href="#home" class="logo">
                         <div class="logo-icon"><img src="./src/logo/logo.png" ></div>
                         Jidnyasa Concept School
                     </a>
