--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <title>Jidnyasa Concept School</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link rel="stylesheet" href="./css/styles.css">
+    <style>
+      #jidnyasaBoy {
+        position: fixed;
+        bottom: 0;
+        right: -90px; /* change to 'right: 0' if you want it on the right */
+        width: 450px; /* adjust size as needed */
+        z-index: 1000;
+        pointer-events: none; /* ensures it doesn’t block clicks */
+      }
+    </style>
 </head>
 <body>
     <div class="background-container">
@@ -59,6 +69,11 @@
         </svg>
         <div class="loader-text">Please Wait....</div>
     </div>
+<video autoplay loop muted playsinline id="jidnyasaBoy">
+  <source src="src/child.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
     <div class="site-container" id="site-container">
         <div class="layout-container">
             <!-- Navigation -->
