--- a/index.html
+++ b/index.html
@@ -60,20 +60,14 @@
         </svg>
         <div class="loader-text">Please Wait....</div>
     </div>
-<video autoplay loop muted playsinline id="jidnyasaBoy">
-  <source src="src/child1.mp4" type="video/mp4"><style>
-      #jidnyasaBoy {
-        position: fixed;
-        bottom: 0;
-        right: 0px; /* change to 'right: 0' if you want it on the right */
-        width: 130px; /* adjust size as needed */
-        z-index: 1000;
-        pointer-events: none; /* ensures it doesn’t block clicks */
-      }
-    </style>
-  Your browser does not support the video tag.
-</video>
-
+    <a class="bot-div" href="#">
+        <div class="bounce-text">Ask Bot!!</div>
+        <video autoplay loop muted playsinline id="jidnyasaBoy">
+        <source src="src/child1.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+        </video>
+    </a>
+    </div>
     <div class="site-container" id="site-container">
         <div class="layout-container">
             <!-- Navigation -->
